-- 検索用のアプリケーションIDを削除した
-- ファイル名の命名規則を変更
-- extlibの設置
-- プラグイン関連のethnaコマンドを整理し、インストール、アンインストール関連コマンドは ethna pear-local コマンドに一本化
--- ethna channel-update (削除)
--- ethna info-plugin (削除)
--- ethna install-plugin (削除)
--- ethna uninstall-plugin (削除)
--- ethna upgrade-plugin (削除)
--- ethna list-plugin (削除)
-- プラグインパッケージのスケルトンを生成するコマンドとして ethna create-plugin コマンドを追加
-- Filterは一貫してプラグインを使うように変更したため、add-project時の app/filter ディレクトリを削除。
- Smartyに関する変更
-- Smarty を 2.6.26 に追随
-- 組み込みの Smarty プラグインの追加
--- explode修正子 (文字列を，ある文字で分割して配列に変換する）
- その他雑多な変更
-- [Breaking B.C] ルールがユーザにとって直感的ではないとの理由から、フォーム定義の max と フォームヘルパの maxlength の連携機能を削除 (thanks: syachi5150)
--- https://sourceforge.jp/ticket/browse.php?group_id=1343&tid=16325
-- Windowsユーザへの便宜のため、zipアーカイブで成果物を配布するオプションを追加

*** bug fix

- Ethna_Controller#getTemplatedir を無視してテンプレートディレクトリを決定していたバグを修正(thanks: hiko)
-- getTemplatedirメソッドをオーバライドしても強制的にロケールが付加されていた
-- https://sourceforge.jp/ticket/browse.php?group_id=1343&tid=15570
- "ethna pear-local list -a" の実行結果がエラーになってしまうバグを修正
-- https://sourceforge.jp/ticket/browse.php?group_id=1343&tid=15760
- safe-mode が ON の際に、CacheManager_Localfile がディレクトリを生成できないので、tmp ディレクトリ直下にキャッシュファイルを作成するようにした
-- skel/skel.app_manager.php も修正
- APPID-ini.php が存在しない場合，またはURLが設定にない場合，デフォルトURLが HTTP_HOST で設定されていたが，末尾に / がなかったので修正
- フォームヘルパで自動的に出力されるhiddenタグの閉じ忘れを修正(thanks: id:syachi5150)
- ethna add-app-manager コマンドで生成されるファイル名およびクラス名が間違っていたバグを修正(thanks: id:syachi5150)
-- https://sourceforge.jp/ticket/browse.php?group_id=1343&tid=16137
- Validatorが出力するメッセージからフォーム名の後ろのスペースを削るように修正。(thanks: id:syachi5150)
-- https://sourceforge.jp/ticket/browse.php?group_id=1343&tid=16336
- Smarty 拡張プラグインの wordwrap_i18n にアルファベットのみを渡した場合に正しい結果が返らないバグを修正
-- 末尾のスペースを取り除く挙動も wordwrap に合わせて削除
-- http://sourceforge.jp/ticket/browse.php?group_id=1343&tid=16839
- Ethna_Session#isAnonymous メソッドが状態を正しく取得できない場合があるバグを修正(thanks:longkey1)
-- http://ml.ethna.jp/pipermail/users/2008-February/000899.html
- ethna add-test コマンドのヘルプが機能していなかったバグを修正
